Game of life complete

--- a/css/life-game2.css
+++ b/css/life-game2.css
@@ -1,22 +1,6 @@
-.dots {
+.btn-group {
   display: block;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  height: 4px;
-  width: 4px;
-  position: absolute;
-}
-
-.world {
-  display: block;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  height: 400px;
-  width: 400px;
-  background-color: black;
-  position: absolute;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
